替换后的最长重复字符_medium_424 解题报告

--- a/src/滑动窗口/滑动窗口.md
+++ b/src/滑动窗口/滑动窗口.md
@@ -1,5 +1,5 @@
 # 滑动窗口求窗口最大值
-```java
+```
 // 维持一个单调的双头队列即可
 Deque<Integer> deque = new LinkedList<>();
 public void push_back(int value) {
@@ -10,7 +10,22 @@ public void push_back(int value) {
 }
 ```
 使用此思路可A：
-```JAVA
+```
 滑动窗口最大值_hard_239
 队列的最大值II_medium_剑指Offer59
+```
+
+# 固定滑动窗口
+有些题能想象出一个窗口，固定长，滑来滑去。
+顶多加一个计数器。
+```dtd
+爱生气的书店老板_medium_1052
+找到字符串中所有字母异位词_medium_438
+字符串的排列_medium_567
+```
+# 填坑型滑动窗口
+这些题就是可以把一个窗口拆成N份去填坑，可以连续，也可以散开。
+这种题可以用 windowCnt[x] + N 去比较 right - left  
+```dtd
+替换后的最长重复字符_medium_424
 ```
