至多包含两个不同字符的最长子串_medium_159 解题报告

--- a/src/滑动窗口/滑动窗口.md
+++ b/src/滑动窗口/滑动窗口.md
@@ -29,3 +29,39 @@ public void push_back(int value) {
 ```dtd
 替换后的最长重复字符_medium_424
 ```
+
+# 字符种类型窗口
+大概就是求最多 K 种字符，所能达到的最长字符串
+```dtd
+int charClassCnt = 0;
+int[] window = new int[128];
+
+while(right < length){
+    // 种类新增的条件 == 1
+    if (window[r] == 1) {
+        charClassCnt++;
+    }
+    
+    // 种类符合条件：窗口伸展
+    if (charClassCnt <= 2) {
+        ans = Math.max(ans, right - left);
+        continue;
+    }
+    
+    //种类不符合条件：窗口收缩
+    while (charClassCnt > 2) {
+        char l = s.charAt(left);
+        left++;
+        window[l]--;
+        
+        // 种类消减的条件 == 0
+        if (window[l] == 0) {
+            charClassCnt--;
+        }
+    }
+}
+```
+典型的题：
+```dtd
+至多包含两个不同字符的最长子串_medium_159
+```
