在排序数组中查找元素的第一个和最后一个位置_medium_34 解题报告

--- a/src/二分查找/二分查找题型.md
+++ b/src/二分查找/二分查找题型.md
@@ -11,3 +11,44 @@ int mid = left + (right - left )/2
 ```dtd
 搜索二维矩阵_medium_74
 ```
+
+# 查找左边界的
+* 闭区间 [left, right]，其中 left = 0, right = n-1
+* while(left<=right) 退出条件是 left > right
+    * [i, i-1] 找到了, nums[i] == target
+    * [i, i-1] 没找到，nums[i] != target
+    * [0, -1] 一直找不到更小的，右边界往左逼进
+    * [n, n-1] 一直找不到更大的，左边界往右逼进
+    
+经典题型：
+```dtd
+在排序数组中查找元素的第一个和最后一个位置_medium_34
+```   
+关键代码： 
+```dtd
+int left = 0;
+int right = nums.length - 1;
+while (left <= right) {
+    int mid = left + (right - left) / 2;
+    //System.out.println(" "+left +" "+mid+" "+right);
+    if (target < nums[mid]) {
+        right = mid - 1;
+    } else if (target > nums[mid]) {
+        left = mid + 1;
+    } else if (target == nums[mid]) {
+        right = mid - 1;
+    }
+}
+//System.out.println(" "+left +" "+right);
+// [0, -1]
+// [n, n-1]
+// [i, i-1]
+int ans1 = -1;
+if (left == nums.length && nums[left - 1] == target) {
+    ans1 = nums.length - 1;
+} else if (right == -1 && nums[0] == target) {
+    ans1 = 0;
+} else if (left < nums.length && nums[left] == target) {
+    ans1 = left;
+}
+```
